Fix size for mobile devices

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
       <div class="wrapper">
         <div class="facts-item">
-          <img src="img/gus1.svg" alt="gus1" />
+          <img src="img/gus1.svg" alt="gus1" class="facts-item-img" />
           <h3 class="facts-item-title">Система навігації</h3>
           <p class="facts-item-descr">
             Супутниковий GPS та ехолокатори розпізнають ворожу техніку навіть на
@@ -58,7 +58,7 @@
         </div>
 
         <div class="facts-item">
-          <img src="img/gus2.svg" alt="gus2" />
+          <img src="img/gus2.svg" alt="gus2" class="facts-item-img" />
           <h3 class="facts-item-title">Очі-тепловізори</h3>
           <p class="facts-item-descr">
             Допомагають виявити характер сигнатури об’єктів та значно підвищують
@@ -67,7 +67,7 @@
         </div>
 
         <div class="facts-item">
-          <img src="img/gus3.svg" alt="gus3" />
+          <img src="img/gus3.svg" alt="gus3" class="facts-item-img" />
           <h3 class="facts-item-title">Байракрила</h3>
           <p class="facts-item-descr">
             Можуть нести 2-4 керовані ракети, що вражають ціль на відстані
